--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img src="imagens/html.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor consequatur aliquid recusandae voluptatem hic nobis expedita asperiores. Reprehenderit provident repudiandae eligendi eveniet sit perspiciatis iure quidem facilis deleniti. Temporibus, odit!</p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img src="imagens/curso-javascript.png" alt="Curso JavaScript">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti expedita iste ullam perferendis culpa minima inventore quisquam, doloremque debitis, excepturi et. Quod dolorem esse sapiente expedita quo harum consectetur fuga.</p>
         </article>
     </main>
