--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <img src="imagens/html.png" alt="Curso HTML">
+            <img class="lado" src="imagens/html.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor consequatur aliquid recusandae voluptatem hic nobis expedita asperiores. Reprehenderit provident repudiandae eligendi eveniet sit perspiciatis iure quidem facilis deleniti. Temporibus, odit!</p>
+            <p><a href="curso-html.html">Acesse curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
-            <img src="imagens/curso-javascript.png" alt="Curso JavaScript">
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JavaScript">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti expedita iste ullam perferendis culpa minima inventore quisquam, doloremque debitis, excepturi et. Quod dolorem esse sapiente expedita quo harum consectetur fuga.</p>
+            <p><a href="curso-javascript.html">Acesse o curso de JavaScript</a></p>
+
         </article>
     </main>
 </body>
